--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <p>Rich, bold, and pure.</p>
             </div>
             <div class="menu-item">
+                <img src="images/coffee3.png" alt="Macchiato">
+                <h3>Macchiato</h3>
+                <p>Not like the starbucks kind.</p>
+            </div>
+            <div class="menu-item">
                 <img src="images/coffee2.png" alt="Latte">
                 <h3>Latte</h3>
                 <p>Silky and smooth.</p>
