change caper coffee to b3 brewing

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caper Coffee</title>
+    <title>B3 Brewing Co.</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
-        <div class="logo">Caper Coffee</div>
+        <div class="logo">B3 Brewing Co.</div>
         <nav class="nav">
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#menu">Menu</a></li>
+                <li><a href="#menu">Beers</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -21,7 +21,7 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h1>Welcome to Caper Coffee</h1>
+            <h1>B3 Brewing Co.</h1>
             <p>Minimalist coffee experiences brewed for the bold.</p>
         </div>
     </section>
@@ -32,26 +32,26 @@
     </section>
 
     <section id="menu" class="menu">
-        <h2>Our Menu</h2>
+        <h2>Our Beers</h2>
         <div class="menu-items">
             <div class="menu-item">
                 <img src="images/coffee1.png" alt="Espresso">
-                <h3>Espresso</h3>
+                <h3>The Reporter</h3>
                 <p>Rich, bold, and pure.</p>
             </div>
             <div class="menu-item">
                 <img src="images/coffee3.png" alt="Macchiato">
-                <h3>Macchiato</h3>
+                <h3>La Fogata</h3>
                 <p>Not like the starbucks kind.</p>
             </div>
             <div class="menu-item">
                 <img src="images/coffee2.png" alt="Latte">
-                <h3>Latte</h3>
+                <h3>Gorra Roja</h3>
                 <p>Silky and smooth.</p>
             </div>
             <div class="menu-item">
                 <img src="images/coffee3.png" alt="Cappuccino">
-                <h3>Cappuccino</h3>
+                <h3>La Ola</h3>
                 <p>A classic favorite.</p>
             </div>
         </div>
@@ -68,7 +68,7 @@
     </section>
 
     <footer class="footer">
-        <p>&copy; 2024 Caper Coffee. All rights reserved.</p>
+        <p>&copy; 2024 B3 Brewing Co. All rights reserved.</p>
     </footer>
 </body>
 </html>
